Fix social navigation on mobile

--- a/src/styles/modules/app/responsiveness.scss
+++ b/src/styles/modules/app/responsiveness.scss
@@ -112,12 +112,16 @@ $full-container-width: $container-max-width * 100% / $container-max-width-percen
     background: rgba(0, 0, 0, .1);
     border-bottom: 1px solid rgba(0, 0, 0, .1);
 
+    > li {
+      flex: 1 0;
+    }
+
     a {
       line-height: 1.4em;
     }
 
     a > span {
-      display: inline-block;
+      display: block;
     }
   }
 }
